--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body{
     justify-content: center;
     align-items:center;
     background-image: url("./images/img.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
 }
 
 .container{
@@ -20,7 +20,7 @@ body{
     gap:20px;
     margin-top:50px;
     padding: 55px 0;
-
+    background-color: aliceblue;
 }
 .container img{
     width:50%;
@@ -88,7 +88,7 @@ input{
 }
 
 #myList{
-    color:rgb(243, 248, 247);
+    color:rgb(39, 164, 139);
     font-size:20px;
     padding: 25px;
 }
